--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
 
       <section>
         <div
-          class="hero flex flex-col md:flex-row md:gap-52 sm:px-10 gap-y-10 md:mt-[30px] gap-0 mt-4 items-center justify-evenly w-full min-h-[70vh]"
+          class="hero flex flex-col md:flex-row md:gap-2 sm:px-10 gap-y-10 md:mt-[30px] gap-0 mt-4 items-center justify-evenly w-full min-h-[70vh]"
         >
           <div class="hero-left w-[250px] md:w-[450px]">
-            <h1 class="text-3xl text-[#e5e7eb] md:text-5xl font-bold w-[400px] ">
+            <h1 class="text-3xl text-[#e5e7eb] md:text-5xl font-bold w-[245px] md:w-[335px] lg:w-[400px] ">
               Hello! I am a Web
               <span class="bg-text-gradient1 bg-clip-text text-transparent"
                 >Designer</span
@@ -88,7 +88,7 @@
               >
             </h1>
             <p
-              class="text-[#e5e7eb] leading-[18px] mt-[20px] text-[12px] mb-[30px] md:text-[15px] w-[400px] "
+              class="text-[#e5e7eb] leading-[18px] mt-[20px] text-[12px] mb-[30px] md:text-[15px] w-[245px] md:w-[335px] lg:w-[400px]"
             >
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur
               error culpa ipsa. Sint deleniti esse voluptate fuga ipsum eos
@@ -103,7 +103,7 @@
           </div>
           <div class="hero-right">
             <img
-              class="heroImage w-[350px] md:w-[500px]"
+              class="heroImage w-[450px] md:w-[900px]"
               src="./src/assets/web-development-8734249.png"
               alt="Hero Image"
             />
