--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/style.css" />
-    <!-- <link rel="stylesheet" href="./dist/style.css"> -->
+    <link rel="stylesheet" href="./dist/style.css">
     <link rel="shortcut icon" href="./src/assets/Fav.png" type="image/x-icon" />
     <!-- CDN  -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
